# ocs-templates

./: CHANGELOG.md  LICENSE  NOTICE  README.md
CoursewareHub/: .gitignore  000-README.ipynb  001-VCノードの起動.ipynb  001-gakunin.ipynb  002-CoursewareHubのセットアップ.ipynb  901-CoursewareHub環境の削除.ipynb  README.md  gakunin.md
CoursewareHub-not-recommended/images/: notebooks-a.diag
CoursewareHub-not-recommended/notebooks/: 021-VCノード作成-構成2.ipynb  031-VCノード作成-構成3.ipynb  121-CoursewareHubのセットアップ-ローカルユーザ認証.ipynb  211-mAPのグループ作成.ipynb  311-mAPのグループ作成.ipynb  321-CoursewareHubのセットアップ.ipynb  331-CoursewareHubの登録を学認へ申請する.ipynb  411-LTI認証連携の設定を行う.ipynb  511-VCノード作成-IdP-proxy.ipynb  531-IdP-proxyを学認へ申請する.ipynb  591-IdP-proxyの削除.ipynb  701-sinleuserコンテナイメージの変更.ipynb  702-管理者の追加.ipynb  911-ノードの停止.ipynb  922-workerノードの削除.ipynb  932-workerノードの電源状態変更スケジュールを設定する.ipynb
CoursewareHub-not-recommended/playbooks/: deploy-inventory.yml  fetch-idpproxy-ssp-config.yml  install-restuser.yml  setup-certs.yml  setup-jupyterhub.yml  setup-postgres.yml
CoursewareHub-not-recommended/scripts/: check_params.py  cwh.py  group.py  nb_utils.py
CoursewareHub-not-recommended/template/: docker-compose.yml
CoursewareHub/images/: cw.pptx  notebooks-a.diag  notebooks-b.diag  notebooks-c.diag  notebooks-gakunin.diag  notebooks-idp.diag  notebooks.diag
CoursewareHub/notebooks/: 011-VCノード作成-構成1.ipynb  021-VCノード作成-構成2.ipynb  031-VCノード作成-構成3.ipynb  121-CoursewareHubのセットアップ-ローカルユーザ認証.ipynb  (+34 more)
HybridCloud/: README.md
LogAnalysis/: README.ipynb  README.md
LogAnalysis/plugins/memeid-extractor/: .gitignore  LICENSE.txt  README.md  pyproject.toml
LogAnalysis/plugins/memeid-extractor/src/memeid_extractor/: __about__.py  __init__.py  __main__.py  extractor.py  validator.py  watch.py
LogAnalysis/plugins/memeid-extractor/src/memeid_extractor/cli/: __init__.py  parser.py
LogAnalysis/plugins/memeid-extractor/tests/: conftest.py  test_cli.py  test_extractor.py  test_validator.py  test_watch.py
Moodle/: .gitignore  000-README.ipynb  README.md
Moodle-Simple/: .gitignore  000-README.ipynb  README.md
OpenHPC/: 000-README.ipynb
OpenHPC-ML-Example/: README.md
OpenHPC-v1/: README.md
OpenHPC-v2/: .gitignore  000-README.ipynb  README.md
OpenHPC-v3/: 000-README.ipynb  README.md  group_vars-reference.md
OpenOnDemand/: 010-インストール.ipynb  020-フロントエンドのセットアップ.ipynb  030-ジョブ実行環境の設定.ipynb  040-ジョブの実行.ipynb  050-JupyterNotebookのセットアップ.ipynb  060-JupyterNotebookジョブの実行.ipynb  070-Linpackフロントエンドの作成.ipynb  080-Linpackの実行.ipynb  090-CS-ood-rdmfsによる学認RDMストレージマウント機能の追加.ipynb  README.md
TheLittlestJupyterHub/: .lc_wrapper_regex.txt  001-JupyterHub環境構築.ipynb  README.md
(+734 files in other folders)
